client/src/components/Editor/Editor.module.css
.container {
  width: 100vw;
  display: flex;
  flex-direction: column;
  flex: 1;
}

.editor {
  display: flex;
  flex-direction: row;
  flex: 1;
  padding: 20px 70px 0 40px;
  border-top: 1px solid #3c3836;
}

.line__numbers {
  display: flex;
  flex-direction: column;
  padding-right: 20px;
  overflow-y: auto;
}

.line__numbers::-webkit-scrollbar {
  display: none;
}

.line__number {
  margin: 0;
  font-size: 16px;
  line-height: 1.5rem;
  text-align: right;
  color: var(--color-light);
}

.codespace {
  position: relative;
  display: flex;
  flex: 1;
  margin-left: 10px;
}

.codespace__textarea {
  caret-color: var(--color-light);
  background: transparent;
  position: absolute;
  color: transparent;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
  resize: none;
  border: none;
  outline: none;
  padding: 0;
  overflow-y: auto;
}

.codespace__pre {
  background: transparent !important;
  height: 100%;
  width: 100%;
  margin: 0 !important;
  padding: 0 !important;
}

.btn__save {
  position: fixed;
  bottom: 3rem;
  right: 3rem;
  height: 6rem;
  width: 6rem;
  background-color: var(--color-yellow);
  border: none;
  border-radius: 50%;
  cursor: pointer;
  transition: 0.3s;
  z-index: 1;
  &:hover {
    transform: scale(1.1);
  }
}

.btn__icon {
  height: 3rem;
  width: 3rem;
  filter: invert(11%) sepia(0%) saturate(0%) hue-rotate(158deg) brightness(100%)
    contrast(88%);
}

@media screen and (max-width: 768px) {
  .editor {
    padding: 20px 20px 0 20px;
  }

  .btn__save {
    bottom: 2rem;
    right: 2rem;
    height: 4rem;
    width: 4rem;
  }

  .btn__icon {
    height: 2rem;
    width: 2rem;
  }
}

